--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 
 *{
     margin: 0;
@@ -8,9 +8,7 @@
 
 body{
     min-height: 100vh;
-    background-color: #b1bfd8;
-    background-image: linear-gradient(315deg, #b1bfd8 0%, #6782b4 74%);
-
+    background-color: #355c7d;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -24,12 +22,14 @@ body{
 
 .title{
     background: white;
+    color: black;
     margin: 2rem 0;
     padding: .5rem 0;
-
+    font-family: "Fredoka", sans-serif;
     text-align: center;
     letter-spacing: 2px;
     font-size: 1.5rem;
+    border-radius: 160px;
 }
 
 .game{
@@ -37,11 +37,10 @@ body{
     justify-content: center;
     align-items: center;
     gap: 2rem;
-
-    border: 5px solid white;
+    font-family: "Fredoka", sans-serif;
     padding: 3rem 2rem;
     text-align: center;
-
+    color: white;
     height: 250px;
 }
 
@@ -53,6 +52,9 @@ body{
 h1{
     text-align: center;
     margin: 1rem 0;
+    font-family: "Fredoka", sans-serif;
+    color: white;
+    
 }
 
 .choices{
@@ -68,7 +70,7 @@ h1{
     margin-right: 2rem;
 
     border-radius: 50%;
-    border: .4rem solid black;
+    border: .4rem solid white;
 
     cursor: pointer;
 
@@ -91,7 +93,7 @@ h1{
 
 .result{
     font-size: 1.5rem;
-    font-family: monospace, sans-serif;
+    font-family: "Fredoka", sans-serif;
     text-transform: uppercase;
     letter-spacing: 2px;
     width: 300px;
